# prefnugget-starterkit

./: .gitignore  CLAUDE.md  DEVELOPER_HOWTO.md  Dockerfile  README.md  combine_eval.py  create_golden_traces.sh  default.config.yml  default.eval.txt  default.nuggets.jsonl  default.qrels.txt  fetch_pilot_dataset.sh  judges.yml  llm-config.yml  pyproject.toml  run_all_datasets.py  run_approval_test.sh  run_kiddie.sh
.claude/skills/autojudge-develop/: SKILL.md
.claude/skills/autojudge-setup/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: integration-tests.yml
data/kiddie/: README.md
data/longeval26-rag/: .gitignore  README.md
data/rag24/: .gitignore  README.md  transform-data.py
data/rag25-gen/: .gitignore  README.md  topics-to-jsonl.py
data/tira-evaluator/: Dockerfile  README.md  evaluator.py
judges/: __init__.py
judges/dspy/: dspy_minima.py  dspy_plain.py
judges/grounded/: __init__.py  groundnugget_judge.py  workflow.yml
judges/ir_axioms/: README.md  axiom_judge.py
judges/langchain_pref/: __init__.py  langchain_judge.py  workflow.yml
judges/naive/: Dockerfile  naive_baseline.py
judges/prefnugget/: __init__.py  prefnugget_judge.py  workflow.yml
judges/pyterrier_retrieval/: README.md
judges/queryonly/: __init__.py  rubric_autojudge.py  workflow.yml
judges/shared/: __init__.py  nugget_judge_base.py  passage_grading.py  pref_common.py  rubric_common.py
judges/tinyjudge/: Dockerfile  README.md
prefnugget.cache/: minima_llm.db
prefnugget_dspy.cache/002/: cache.db
tests/: test_aggregators.py  test_base_class.py  test_customization.py  test_endpoint_contract.py  test_examples.py  test_framework_version.py  test_imports.py  test_langchain_pref.py  test_prompt_snapshots.py  test_workflow_consistency.py
tests/golden-traces/: grounded--best-decide.trace.jsonl  grounded--best.trace.jsonl  grounded--random.trace.jsonl  prefnugget--best-decide-docs.trace.jsonl  prefnugget--best-decide.trace.jsonl  prefnugget--best.trace.jsonl  prefnugget--random-decide-docs.trace.jsonl  prefnugget--random-decide.trace.jsonl  queryonly--response.trace.jsonl
(+5 files in other folders)
