[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prefnugget-starterkit"
version = "0.3.18"
description = "PrefNugget, GroundedNugget, and QueryOnlyNugget AutoJudge implementations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Laura Dietz"}
]
keywords = ["trec", "autojudge", "rag", "evaluation", "ir"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core: only what is needed to import and run the judge. This lets users who
# struggle to set up the submission/test tooling start coding with `pip install -e .`
dependencies = [
    "autojudge-base>=0.4.0",
    "minima-llm>=0.2.4",
    "dspy>=3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
# Everything needed to connect to / submit to TIRA. Submitting requires the test
# suite to pass, so this bundles the test tooling as well.
tira = [
    "prefnugget-starterkit[test]",
    "tira>=0.0.100",
]
evaluate = [
    "autojudge-evaluate>=0.4.0",
]
# Recommended default setup: judge + submission tooling (incl. tests) + evaluation.
# Documentation should always point users at this target to be safe.
all = [
    "prefnugget-starterkit[tira,evaluate]",
    "tqdm>=4.0",
]

[project.urls]
Homepage = "https://anonymous.4open.science/r/too-many-questions/"
Repository = "https://github.com/lausibinsel-dev/too-many-questions"

[tool.setuptools.packages.find]
where = ["."]
include = ["judges*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
